--- a/Festival-App/Festival-App/Platform/XIBs/EditProfileViewController.xib
+++ b/Festival-App/Festival-App/Platform/XIBs/EditProfileViewController.xib
@@ -10,13 +10,13 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EditProfileVC" customModule="Festival_App" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EditProfileViewController" customModule="Festival_App" customModuleProvider="target">
             <connections>
-                <outlet property="chageProfileBtn" destination="kBR-BP-027" id="OTl-IJ-BxY"/>
-                <outlet property="confirmPasswordTxtField" destination="jSU-Fp-YyD" id="wG0-t2-OfL"/>
-                <outlet property="passwordTxtField" destination="nMr-Bz-mjB" id="Pln-l7-SGv"/>
-                <outlet property="profileImgView" destination="3OI-DW-A58" id="wlG-fn-tYe"/>
-                <outlet property="usernameTxtField" destination="Pkg-wn-Mhe" id="TEf-AA-iuP"/>
+                <outlet property="changeProfileButton" destination="kBR-BP-027" id="OTl-IJ-BxY"/>
+                <outlet property="confirmPasswordTextField" destination="jSU-Fp-YyD" id="wG0-t2-OfL"/>
+                <outlet property="passwordTextField" destination="nMr-Bz-mjB" id="Pln-l7-SGv"/>
+                <outlet property="profileImageView" destination="3OI-DW-A58" id="wlG-fn-tYe"/>
+                <outlet property="usernameTextField" destination="Pkg-wn-Mhe" id="TEf-AA-iuP"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -43,11 +43,11 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kBR-BP-027">
                             <rect key="frame" x="15" y="104" width="112" height="33"/>
                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="15"/>
-                            <state key="normal">
+                            <state key="normal" title="Change Image">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
-                                <action selector="onChangeImgPressed:" destination="-1" eventType="touchUpInside" id="au1-Ps-S94"/>
+                                <action selector="onChangeImageTapped:" destination="-1" eventType="touchUpInside" id="au1-Ps-S94"/>
                             </connections>
                         </button>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="luW-rq-gwy">
@@ -66,7 +66,7 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
-                                        <action selector="onClosePressed:" destination="-1" eventType="touchUpInside" id="Kuo-uG-ZzG"/>
+                                        <action selector="onCloseTapped:" destination="-1" eventType="touchUpInside" id="Kuo-uG-ZzG"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="daq-o7-Qze" customClass="RoundedButton" customModule="Festival_App" customModuleProvider="target">
